--- a/meta/main.yml
+++ b/meta/main.yml
@@ -9,14 +9,12 @@ galaxy_info:
   min_ansible_version: '2.4'
   github_branch: 'master'
   platforms:
-    - name: 'Debian'
-      versions:
-        - 'stretch'
     - name: 'Ubuntu'
       versions:
         - 'trusty'
         - 'xenial'
         - 'bionic'
+        - 'disco'
   galaxy_tags:
     - 'database'
     - 'nosql'
